<resources>
    <string name="app_name">MDPGroup18</string>
    <string name="loadText">Load</string>
    <string name="saveText">Save</string>
    <string name="playText">Play</string>
    <string name="stopText">Stop</string>
    <string name="fileName">Enter file name to load/save.</string>
    <string name="replay_activity_title">Replay Viewer</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_activity_title">Bluetooth</string>
    <string name="bluetooh_connect">Connect</string>
    <string name="bluetooth_disconnect">Disconnect</string>
    <string name="bluetooth_scan">Scan</string>
    <string name="connected">Connected</string>
    <string name="select_device">Scan finished</string>
    <string name="calibrate">Calibrate</string>
    <string name="waypoint">Send Waypoint</string>
    <string name="sensor">Sensor (Q)</string>
    <string name="image">View Image</string>
    <string name="statusLbl">Status</string>
    <string name="coordinateLbl">Position</string>
    <string name="directionLbl">Direction</string>
    <string name="status">Idle</string>
    <string name="start_pos">1,1</string>
    <string name="start_dir">N</string>
</resources>